# DataService

./: .gitignore  Dockerfile  README.md  alembic.ini  k8s-deployment.yaml  main_grpc.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1410234abeb1_add_operation.py  2024_06_10_1507-32398e86cc90_update_groupdb.py  2024_06_10_1511-d7e67c660def_update_metadata.py  2024_06_10_1532-22e2d022fe41_remove_description_from_group.py  2024_06_10_2014-8ae6fb16eddd_level_add_autoincrement.py  2024_06_11_1042-7c4f9f467337_level_add_autoincrement.py  2024_06_11_1104-5b6e2d361020_level_param_is_unique.py  2024_06_24_1727-de10f55ef67d_update_user_add_telegram_id.py  2024_06_25_1243-b6d143e83641_update_user_made_user_name_unique.py  2024_06_25_1349-3fcf2819beca_add_table_progress_for_detecting_user_.py  2024_06_25_1356-119c7ab00123_add_table_progress_for_detecting_user_.py  2024_06_25_1456-c6ec017edca1_delete_table_progress.py  2024_06_28_1809-387204e2974c_update_word_table_make_english_word_.py  2024_07_03_1721-07e9b0e9bb9e_update_word_table_make_english_word_.py  2024_07_17_1141-5f922f0cd257_add_user_id_to_group.py  2024_07_17_1210-07fd9251f917_update_user_id_in_group_to_not_nullable.py  2024_07_19_0000-a025d58798bc_update_uesr_words_relationship.py  2024_07_19_0847-28ee946e5e3b_add_uniqueconstraint_group_name_and_.py  2024_07_23_1224-c584912967c8_update_table_user_training_length_field_.py  2024_07_27_2152-fbd615bcd026_add_unique_link_in_word_table_between_.py  (+9 more)
cfg/: .env.template  .template.env  сonfig.py
src/db/: base.py  (+1 more)
tests/: conftest.py
(+60 files in other folders)
