[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = "Beckand service for working with data"
authors = ["Alena Meshcheriakova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
logger = "^1.4"
alembic = "^1.13.2"
redis = "^5.0.8"
pytest = "^8.3.2"
pydantic-settings = "^2.4.0"
grpcio = "^1.65.4"
grpcio-tools = "^1.65.4"
protobuf = "^5.27.3"
fastapi = "^0.112.0"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
